// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Datepicker /> Snapshots should match with custom placeholder single Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        This is a custom placeholder :)
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with default selected date single Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #231B22;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  width: 100%;
  padding: 0;
  border: none;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #231B22;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Aug 3, 2022
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with default selected dates range Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #231B22;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  width: 100%;
  padding: 0;
  border: none;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #231B22;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Aug 3, 2022
         - Aug 18, 2022
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with disabled Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #F5F5FA;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #D7D7E0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #D7D7E0;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
      disabled=""
    >
      <p
        class="c2"
        disabled=""
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with disabled future dates Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with disabled past dates Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with error Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #CA4808;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

.c5 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  margin-top: 4px;
  font-size: 12px;
  color: #CA4808;
  position: absolute;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
    <p
      class="c5"
    >
      This is an error
    </p>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with range Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Datepicker /> Snapshots should match with single Datepicker 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #231B22;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
    tabindex="0"
  >
    <div
      class="c1"
    >
      <p
        class="c2"
      >
        Select Date
      </p>
      <button
        class="c3"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;
